fix side menu cutoff from padding

--- a/assets/scss/_sidemenu.scss
+++ b/assets/scss/_sidemenu.scss
@@ -77,6 +77,8 @@
 
     .slider {
       margin-bottom: 65px;
+      position: relative;
+      top: -9px;
 
       label {
         margin: 20px 0 15px 0;
@@ -91,7 +93,14 @@
       }
     }
 
+    .features {
+      position: relative;
+      top: -9px;
+    }
+
     .checkbox {
+      position: relative;
+      top: -15px;
       padding: 15px 0;
 
       input {
